[package]
name = "f"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["cargo"] }
serde_json = "1.0"
notify = { version = "5.0", default-features = false }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
anyhow = "1.0"
atty = "0.2"
regex = "1.7"
